--- a/lib/command/create/template/demo.tsx.ejs
+++ b/lib/command/create/template/demo.tsx.ejs
@@ -1,4 +1,4 @@
-import { AppBar, Button, Icon } from 'asap-ui';
+import { AppBar, Button, Icon } from 'aone-ui';
 import React from 'react';
 
 const <%= componentName %>Demo = () => (
